--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.3.3",
     "vite": "^4.4.11",
     "wrangler": "^3.13.1"
   }
