--- a/package.json
+++ b/package.json
@@ -6,36 +6,34 @@
   "private": true,
   "scripts": {
     "build": "vite build && vite build --mode client",
-    "dev": "vite",
-    "deploy": "$npm_execpath build && wrangler pages deploy ./dist",
+    "dev": "wrangler dev --live-reload src/index.tsx",
     "format": "prettier --write .",
     "lint": "eslint .",
     "fix": "prettier --write . && eslint --fix ."
   },
   "dependencies": {
-    "@fontsource/m-plus-1p": "^5.0.16",
-    "@hono/vite-dev-server": "^0.0.7",
-    "@sonikjs/react": "^0.0.4",
-    "hono": "^3.7.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sonik": "^0.1.0"
+    "@fontsource/m-plus-1p": "5.0.10",
+    "@visx/delaunay": "3.5.0",
+    "@visx/zoom": "3.3.0",
+    "hono": "4.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20230518.0",
-    "@sonikjs/cloudflare-pages": "^0.0.1",
-    "@types/node": "^20.8.6",
-    "@types/react": "^18.2.20",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
-    "bun-types": "^1.0.6",
-    "eslint": "^8.52.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.11",
-    "wrangler": "^3.13.1"
+    "@cloudflare/workers-types": "4.20240314.0",
+    "@types/node": "20.11.28",
+    "@types/react": "18.2.67",
+    "@types/react-dom": "18.2.22",
+    "@typescript-eslint/eslint-plugin": "7.3.0",
+    "@typescript-eslint/parser": "7.3.0",
+    "bun-types": "1.0.33",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-react": "7.34.1",
+    "globals": "14.0.0",
+    "prettier": "3.2.5",
+    "typescript": "5.4.2",
+    "wrangler": "3.34.2"
   }
 }
