--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
   "name": "visx-demo",
-  "version": "0.0.0",
   "license": "MIT",
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "vite build && vite build --mode client",
-    "dev": "wrangler dev --live-reload src/index.tsx",
+    "dev": "vite",
+    "build": "vite build --mode client && vite build",
+    "preview": "wrangler pages dev ./dist",
+    "deploy": "$npm_execpath run build && wrangler pages deploy ./dist",
     "check": "prettier --check . && eslint .",
     "fix": "prettier --write . && eslint --fix ."
   },
   "dependencies": {
     "@fontsource/m-plus-1p": "5.0.18",
+    "@visx/axis": "3.10.1",
     "@visx/delaunay": "3.5.0",
+    "@visx/scale": "3.5.0",
     "@visx/zoom": "3.3.0",
-    "hono": "4.1.1",
+    "hono": "4.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "4.20240314.0",
-    "@types/node": "20.11.28",
+    "@cloudflare/workers-types": "4.20240208.0",
+    "@hono/eslint-config": "0.0.4",
+    "@hono/vite-cloudflare-pages": "0.2.4",
+    "@hono/vite-dev-server": "0.9.0",
     "@types/react": "18.2.67",
     "@types/react-dom": "18.2.22",
     "@typescript-eslint/eslint-plugin": "7.3.0",
@@ -33,6 +38,7 @@
     "globals": "14.0.0",
     "prettier": "3.2.5",
     "typescript": "5.4.2",
-    "wrangler": "3.34.2"
+    "vite": "5.0.12",
+    "wrangler": "3.32.0"
   }
 }
